--- a/s5-framing.css
+++ b/s5-framing.css
@@ -8,7 +8,8 @@
 div#header, div#footer, .slide {width: 100%; top: 0; left: 0;}
 div#header {top: 0; height: 3em; z-index: 1;}
 div#footer {top: auto; bottom: 0; height: 2.5em; z-index: 5;}
-.slide {top: 0; width: 92%; padding: 3.5em 4% 4%; z-index: 2;  list-style: none;}
+.slide {top: 0; width: 92%; padding: 3.5em 4% 4%; list-style: none;}
+.visible {z-index: 2;}
 div#controls {left: 50%; bottom: 0; width: 50%; z-index: 100;}
 div#controls form {position: absolute; bottom: 0; right: 0; width: 100%;
   margin: 0;}
